<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.tipcalculator.MainActivity">


    <TextView
        android:id="@+id/enter_bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/enter_bill_amount"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/bill_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/enter_bill_amount"
        android:layout_marginTop="15dp"
        android:ems="5"
        android:gravity="center"
        android:hint="$$$"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/select_tip_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bill_amt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/select_tip_percentage"
        android:textSize="25sp" />

    <SeekBar
        android:id="@+id/tip_percentage_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/select_tip_percentage"
        android:layout_marginTop="15dp"
        android:max="40"
        android:progress="20"
        android:thumb="@drawable/ic_money_60dp"/>

    <TextView
        android:id="@+id/tip_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="%"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@+id/tip_percentage_seekbar"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip_percentage"
        android:layout_marginTop="40dp"
        android:text="@string/calculate_button_message"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/split_tip_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Split Bill"
        android:layout_below="@+id/calculate_button"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/number_of_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/split_tip_checkBox"
        android:layout_centerHorizontal="true"
        android:ems="8"
        android:hint="how many people?"
        android:inputType="number"
        android:textAlignment="center" />


</RelativeLayout>
